--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
     <h3><img src="img/25498347_866693190177192_3369573611990241088_n.jpg" width="361" height="352" /></h3>
     <h3 class="font2">นาย เตชภณ มานชู    </h3>
     <h3 class="font2">ชั้น ม.5/7 เลขที่20    </h3>
-    <h3 class="font2"><span class="font4">โรงเรียนศรีพฤฒา</span></h3>
+    <h3 class="font2"><span class="font4"> โรงเรียนศรีพฤฒา</span></h3>
     <table width="80%" border="0">
       <tr>
         <td width="8%" align="center" bgcolor="#FFFF00" class="font3">ลำดับ</td>
@@ -42,11 +42,11 @@ body {
       </tr>
       <tr>
         <td bgcolor="#99FF33">2</td>
-        <td align="center" bgcolor="#00FF99">Tank</td>
+        <td align="center" bgcolor="#00FF99"><a href="https://indynohum.github.io/Tank/" target="_blank">Tank</a></td>
       </tr>
       <tr>
         <td bgcolor="#99FF33">3</td>
-        <td align="center" bgcolor="#00FF99">Bird</td>
+        <td align="center" bgcolor="#00FF99"><a href="https://indynohum.github.io/Surviv/" target="_blank">Surviv</a></td>
       </tr>
       <tr>
         <td bgcolor="#99FF33">4</td>
